<?xml version="1.0"?>
<package format="2">
  <name>hatchbed_localization_util</name>
  <version>0.0.1</version>
  <description>The hatchbed_localization_util package</description>

  <maintainer email="marcalban@hatchbed.com">Marc Alban</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>param_util</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>